--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,3 +72,23 @@ img {
     align-items: center;
     height: 100%;
 }
+
+.Img2 {
+    width: auto;
+    height: 250px;
+    padding: 15px 300px;
+}
+
+.bigtxt {
+    color: white;
+    
+}
+
+.Secbox {
+    background-color: light grey;
+    border: 1px solid black;
+    width: 700px;
+    margin: auto;
+}
+
+
