--- a/CSS/style.css
+++ b/CSS/style.css
@@ -76,19 +76,33 @@ img {
 .Img2 {
     width: auto;
     height: 250px;
-    padding: 15px 300px;
+    padding: 10px 300px;
 }
 
 .bigtxt {
     color: white;
     
+    
 }
 
 .Secbox {
-    background-color: light grey;
+    background-color: #f2f5f3;
     border: 1px solid black;
     width: 700px;
+    margin: 50px auto;
+}
+
+.Sectxt {
+    color: black;
+    margin: 0 20px;
+    font-family: sans-serif;
+}
+
+.lineb {
+    width: 1000px;
     margin: auto;
 }
+
+
 
 
