--- a/CSS/style.css
+++ b/CSS/style.css
@@ -77,6 +77,7 @@ img {
     width: auto;
     height: 250px;
     padding: 10px 300px;
+    display: inline-block
 }
 
 .bigtxt {
@@ -101,6 +102,36 @@ img {
 .lineb {
     width: 1000px;
     margin: auto;
+}
+
+.toptxt {
+    color: white
+}
+
+.footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 400px;
+    background-color: black;
+    color: white;
+    text-align: center; }
+
+.Featured {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 100px;
+}
+
+.footerimg {
+    width: auto;
+    height: 250px;
+    position: relative;
+    right: 500px;
+    top: 50px;
+    
 }
 
 
