--- a/CSS/style.css
+++ b/CSS/style.css
@@ -77,7 +77,39 @@ img {
     width: auto;
     height: 250px;
     padding: 10px 300px;
-    display: inline-block
+    display: inline;
+}
+
+.img2box {
+    display: inline;
+    color: white;
+    float: right;
+    background-color: orange;
+    border: 1px solid black;
+    width: 170px;   
+    text-align: center;
+    position: relative;
+    right: 250px;
+    top: 90px;
+    
+}
+
+.img2txt {
+    color: black;
+    display: inline;
+    float: right;
+    position: relative;
+    right: 450px;
+}
+
+.img2txt1 {
+    color: black;
+    display: inline;
+    float: right;
+    position: relative;
+    right: 215px;
+    top: 70px;
+    
 }
 
 .bigtxt {
@@ -134,6 +166,41 @@ img {
     
 }
 
+.Footertxt1 {
+    position: relative;
+    width: 100px;
+    bottom: 95px;
+    margin: auto;
+    text-align: center;
+    line-height: 5px;
+       
+}
+
+.Footertxt2 {
+    position: relative;
+    width: 100px;
+    left: 170px;
+    bottom: 100px;
+    margin: auto;
+    text-align: center;
+    line-height: 5px;
+       
+}
+
+.Footertxt3 {
+    position: relative;
+    width: 100px;
+    left: 370px;
+    bottom: 105px;
+    margin: auto;
+    text-align: center;
+    line-height: 5px;
+       
+}
 
 
 
+
+
+
+ 
